data/derived/fa15/progs/unify/prog3000.ml.out
Characters 87-88:
  List.fold_left f base fs;;
                 ^
Error: This expression has type (('a -> 'a) -> 'b) -> 'c -> 'b
       but an expression was expected of type
         (('a -> 'a) -> 'b) -> 'c -> ('a -> 'a) -> 'b
       The type variable 'b occurs inside ('a -> 'a) -> 'b
